--- a/css/large.css
+++ b/css/large.css
@@ -30,7 +30,7 @@ nav {
   z-index: 100;
   text-align: center;
   width: 100%;
-  height: 9%;
+  height: 14%;
   background-image: url("pic/carbon_white.jpg");
   background-repeat: repeat-x;
   background-attachment: fixed;
@@ -44,7 +44,7 @@ nav ul {
   position: absolute;
   list-style:none;
   text-align:center;
-  background-color: red;
+  outline: 2px solid blue;
   left: 0;
   right: 0;
   top: 0;
@@ -61,17 +61,18 @@ nav ul {
 nav ul li {
   height: 100%;
   margin-top: auto;
-  /* margin-bottom: auto; */
+  margin-bottom: auto;
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  background-color: snow;
+  outline: 2px solid blue;
   width: auto;
   margin-left: 20px;
   color: inherit;
   text-shadow: 1px 1px 3px snow;
   transition: text-shadow 0.3s;
   text-align: center;
+  content: "";
 }
 nav ul li:hover {
   color: gold;
@@ -79,12 +80,9 @@ nav ul li:hover {
   /* box-shadow:0px 0px 1px rgba(	0,0,0, 0.8) inset; */
 }
 nav ul li a {
-  /* background: radial-gradient(circle, rgba(255,250,250, 0.8), rgba(255,250,250, 0.25), rgba(255,250,250, 0.01)); */
   border-radius: 20px;
   vertical-align: middle;
-  margin-top: 20%;
-  /* height: 100%; */
-  /* margin-top: auto; */
+  margin-top: auto;
   margin-bottom: auto;
   box-shadow: inherit;
   text-shadow: inherit;
@@ -93,9 +91,7 @@ nav ul li a {
   font-size: 2em;
   color: inherit;
   position: relative;
-  display: block;
-  background-color: yellow;
-  text-align: bottom;
+  outline: 2px solid blue;
 }
 nav ul li:nth-child(1){
   margin-left: 0px;
