--- a/css/phone.css
+++ b/css/phone.css
@@ -26,28 +26,29 @@ body {
 
 /* navigacia */
 nav {
-  overflow: hidden;
-  outline: 2px solid snow;
+  /* outline: 2px solid blue; */
   top:0;
   position: fixed;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: auto;
   z-index: 100;
   text-align: center;
   width: 100%;
-  height: 40px;
+  height: 8%;
   background-image: url("pic/carbon_white.jpg");
   background-repeat: repeat-x;
   background-attachment: fixed;
   background-size: auto;
   color: black;
   user-select: none;
+  overflow-y: hidden;
 }
 
-#nav-wrap ul {
-  height: 20px;
+nav ul {
+  /* height: auto; */
+  list-style-type: none;
   position: absolute;
+  list-style:none;
+  text-align:center;
+  outline: 2px solid blue;
   left: 0;
   right: 0;
   top: 0;
@@ -55,56 +56,119 @@ nav {
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
-  height: auto;
-  overflow: visible;
   margin-bottom: auto;
-  list-style:none;
-  text-align:center;
-  background-color: red;
-  /* height: auto; */
+  width: auto;
+  height: 100%;
   text-align: center;
+  display: inline-flex;
+  justify-content: center;
 }
 nav ul li {
-  text-align: center;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  height: 100%;
+  width: 100%;
   margin-top: auto;
   margin-bottom: auto;
-  /* position: relative; */
-  display: inline;
-  width: auto;
-  height: auto;
+  position: relative;
+  display: flex;
+  vertical-align: middle;
+  outline: 2px solid blue;
   color: inherit;
-  margin-left: 2%;
   text-shadow: 1px 1px 3px snow;
   transition: text-shadow 0.3s;
-  background-color: white;
+  text-align: center;
+  /* content: ""; */
+  background-color: snow;
 }
 nav ul li:hover {
-  color: gold;
   text-shadow: 2px 2px 4px #000000;
   /* box-shadow:0px 0px 1px rgba(	0,0,0, 0.8) inset; */
 }
 nav ul li a {
   /* background: radial-gradient(circle, rgba(255,250,250, 0.8), rgba(255,250,250, 0.25), rgba(255,250,250, 0.01)); */
-  border-radius: 20px;
-  padding: 0px;
+  border-radius: 0;
+  vertical-align: middle;
+  margin-top: auto;
+  margin-bottom: auto;
   box-shadow: inherit;
   text-shadow: inherit;
   text-decoration: none;
-  display: inline-block;
+  display: block;
   font-size: 1em;
   color: inherit;
-  height: auto;
-  margin-top: auto;
-  margin-bottom: auto;
-  background-color: blue;
+  position: relative;
+  /* outline: 2px solid blue; */
+  width: auto;
+  border-radius: 0;
+  height: 100%;
 }
 nav ul li:nth-child(1){
   margin-left: 0px;
 }
+#nav-home{
+  /* background-image: url("pic/carbon_white.jpg"); */
+  background-repeat: no-repeat;
+  /* background-attachment:  */
+  background-position: center;
+  background-size: auto;
+  background-image: url("icons/menu.png");
+  background-size: auto;
+  /* outline: 2px solid blue; */
+  height: 100%;
+  width: 100%;
+  display: block;
+}
+#nav-home span{
+  display: none;
+}
+#nav-gallery{
+  /* background-image: url("pic/carbon_white.jpg"); */
+  background-repeat: no-repeat;
+  /* background-attachment:  */
+  background-position: center;
+  background-size: auto;
+  background-image: url("icons/galerry.png");
+  background-size: auto;
+  /* outline: 2px solid blue; */
+  height: 100%;
+  width: 100%;
+  display: block;
+}
+#nav-gallery span{
+  display: none;
+}
+#nav-partners{
+  /* background-image: url("pic/carbon_white.jpg"); */
+  background-repeat: no-repeat;
+  /* background-attachment:  */
+  background-position: center;
+  background-size: auto;
+  background-image: url("icons/partners.png");
+  background-size: auto;
+  /* outline: 2px solid blue; */
+  height: 100%;
+  width: 100%;
+  display: block;
+}
+#nav-partners span{
+  display: none;
+}
+#nav-contact{
+  /* background-image: url("pic/carbon_white.jpg"); */
+  background-repeat: no-repeat;
+  /* background-attachment:  */
+  background-position: center;
+  background-size: auto;
+  background-image: url("icons/contact.png");
+  background-size: auto;
+  /* outline: 2px solid blue; */
+  height: 100%;
+  width: 100%;
+  display: block;
+}
+#nav-contact span{
+  display: none;
+}
+
 #home:hover, #news:hover, #contact:hover, #partners:hover{
   box-shadow:0px 0px 30px rgba(	0,0,0, 0.8);
   /* background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.7)); */
@@ -194,6 +258,7 @@ h1{
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+  /* content: "css\icons\menu.png"; */
 }
 #popis {
   display: block;
