--- a/css/reset.css
+++ b/css/reset.css
@@ -25,7 +25,7 @@ time, mark, audio, video {
 }
 h1 {
   margin: 0;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
