--- a/css/landscape.css
+++ b/css/landscape.css
@@ -1,97 +1,127 @@
-/* Extra small devices (phones, 600px and down) */
-/* @media only screen and (max-width: 600px) {...}  */
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-/* @media only screen and (min-width: 600px) {...}  */
-
-/* Medium devices (landscape tablets, 768px and up) */
-/* @media only screen and (min-width: 768px) {...}  */
-
-/* Large devices (laptops/desktops, 992px and up) */
-/* @media only screen and (min-width: 992px) {...}  */
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-/* @media only screen and (min-width: 1200px) {...} */
-
-
-
-
-body {
-  /* background-image: url("pic/window_rain.png"); */
-  /* background-repeat: repeat-y;
-  background-attachment: fixed;
-  background-size: cover; */
+body html {
   width: 100%;
+  height: 100%;
 }
-nav {
-  outline: 2px solid snow;
-  top:0;
+h1{
+  font-size: 2em;
+}
+.all-wrapper{
   position: fixed;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: auto;
-  padding-bottom: auto;
-  z-index: 100;
-  text-align: center;
   width: 100%;
-  height: 40px;
-  background-image: url("pic/carbon_white.jpg");
+  height: 100%;
+  /* background-color: red; */
+}
+.navi-wrap{
+  /* kontrola */
+  /* box-sizing: border-box;
+  border: 3px solid green; */
+  /************************/
+  top: 0;
+  height: 5%;
+  width: 100%;
+  z-index: 10;
+}
+.scrolling-wrapper{
+  /* kontrola */
+  /* box-sizing: border-box;
+  border: 3px solid green; */
+  /************************/
+  top: 5%;
+  z-index: -1;
+  height: 95%;
+  width: 100%;
+  scroll-behavior: smooth;
+  overflow-y: scroll;
+  text-align: center;
+}
+.nav {
+  /* kontrola */
+  box-sizing: border-box;
+  /* border-bottom: 1px solid black; */
+  /************************/
+  box-shadow: 0 2px 1px 2px rgba(0,0,0, 0.5);
+  /* box-shadow: 0 10px black inset,0 -10px red inset, -10px 0 blue inset, 10px 0 green inset; */
+  /* box-shadow: 0px 3px 5px black; */
+  /* box-shadow:0px 0px 20px rgba(	0,0,0, 0.8); */
+  position: relative;
+  width: 100%;
+  height: 100%;
+  /* background-image: url("pic/nekonecny.png"); */
   background-repeat: repeat-x;
-  background-attachment: fixed;
-  background-size: auto;
-  /* background-color: rgba(0,0,0, 0.3); */
-  /* background-repeat: repeat-x; */
-  /* background-size: cover; */
+  /* background-attachment: fixed; */
+  background-size: contain;
   color: black;
   user-select: none;
-  /* background: radial-gradient(circle, rgba(255,250,250, 0.4), rgba(255,250,250, 0.20), rgba(255,250,250, 0.01)); */
+  display: block;
+  background: radial-gradient(circle, rgba(250, 250, 250, 1), rgba(230,230,230, 1), rgba(210,210,210, 1), rgba(100,100,100, 1));
 }
-nav ul {
-  list-style-type: none;
-  margin-top: auto;
-  margin-bottom: auto;
-  padding: 0;
-  position: relative;
-  list-style:none;
+.nav ul {
+  /* kontrola */
+  /* box-sizing: border-box;
+  border: 3px solid snow;  */
+  /************************/
+  position: absolute;
+  height: 100%;
+  list-style: none;
   text-align:center;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  width: 80%;
+  height: 100%;
+  text-align: center;
+  display: inline-flex;
+  justify-content: center;
 }
-nav ul li {
+.nav ul li {
+  /* kontrola */
+  box-sizing: border-box;
+  border-left: 2px solid black;
+  /* border: 2px solid black; */
+  /************************/
+  position: relative;
+  padding-left: 1%;
+  padding-right: 1%;
+  height: auto;
+  width: auto;
   margin-top: auto;
   margin-bottom: auto;
-  position: relative;
-  display: inline-block;
-  width: auto;
-  height: auto;
-  margin-left: 20px;
+  display: flex;
+  vertical-align: middle;
   color: inherit;
   text-shadow: 1px 1px 3px snow;
   transition: text-shadow 0.3s;
 }
-nav ul li:hover {
-  color: gold;
-  text-shadow: 2px 2px 4px #000000;
-  /* box-shadow:0px 0px 1px rgba(	0,0,0, 0.8) inset; */
+.nav ul li:nth-child(1){
+  margin-left: 0;
+  border-left: none;
 }
-nav ul li a {
-  /* background: radial-gradient(circle, rgba(255,250,250, 0.8), rgba(255,250,250, 0.25), rgba(255,250,250, 0.01)); */
-  border-radius: 20px;
-  padding: 0px;
-  box-shadow: inherit;
-  text-shadow: inherit;
-  text-decoration: none;
-  display: block;
-  font-size: 2em;
-  color: inherit;
+.nav ul li a {
+  /* kontrola */
+  box-sizing: border-box;
+  /* border-bottom: 3px solid black; */
+  /* border-left: 3px solid black; */
+  /************************/
+  width: 100%
   position: relative;
+  margin: auto;
+  display: block;
+  vertical-align: middle;
+  font-size: 1.3em;
+  color: inherit;
 }
-nav ul li:nth-child(1){
-  margin-left: 0px;
+.nav ul li a:hover {
+  color: rgba(50, 50, 210, 1);
+  text-shadow: 2px 2px 4px #000000;
+  box-sizing: border-box;
 }
-#home:hover, #news:hover, #contact:hover, #partners:hover{
-  box-shadow:0px 0px 30px rgba(	0,0,0, 0.8);
+/* #home:hover, #news:hover, #contact:hover, #partners:hover{ */
+  /* box-shadow:0px 0px 30px rgba(	0,0,0, 0.8); */
   /* background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.7)); */
-}
-#home::after, #news::after, #partners::after {
+/* } */
+/* #home::after, #news::after, #partners::after {
   content: '';
   display: block;
   position: absolute;
@@ -99,128 +129,132 @@ nav ul li:nth-child(1){
   bottom: 0;
   left: 0;
   right: 0;
-}
-.scrolling-wrapper{
-  outline: 1px solid black;
-  /* max-height:  */
-  height: calc(100% - 40px);
-  display: block;
-  scroll-behavior: smooth;
-  text-align: center;
+} */
+#bvideo {
   position: fixed;
-  top: 40px;
-  padding-top: 0;
-  padding-bottom: 40px;
-  overflow-y: scroll;
-  width: 100%;
-  /* min-height: 100%; */
-}
-
-#b_video {
-  position: fixed;
-  min-width: 100%;
-  min-height: 100%;
-  top: 40px;
-  bottom: 0;
-  right: 0;
-}
-.gal {
-  z-index: 99999;
-  display: inline-block;
-  position: relative;
-  margin: 5px;
-  width: 300px;
-  height: auto;
-  padding-bottom: 0px;
-}
-
-.gal img{
-  z-index: -4;
-  display: block;
-  position: relative;
-  width: 100%;
-  height: auto;
-  margin-bottom: 0;
-}
-
-.gal:hover{
-  outline: 4px solid gold;
-}
-h1{
-  font-size: 2em;
-}
-#w_1{
-  box-sizing: border-box;
-  position: relative;
-  outline: 1px solid red;
   width: 100%;
   height: 100%;
+  /* top: 5%; */
+  bottom: 0;
+  right: 0;
+  z-index: -5;
+}
+#w1{
+  /* kontrola */
+  box-sizing: border-box;
+  /* border: 3px solid black; */
+  /************************/
+  z-index: -1;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: black;
+  /* background: rgba(250,250,250, 0.1); */
+}
+#w2{
+  /* kontrola */
+  box-sizing: border-box;
+  border: 3px solid black;
+  /************************/
+  z-index: -1;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: black;
+  background: rgba(250,250,250, 0.3);
+}
+#w3{
+  /* kontrola */
+  box-sizing: border-box;
+  border: 3px solid black;
+  /************************/
+  z-index: -1;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  color: black;
+  background: rgba(250,250,250, 0.3);
+}
+#w4{
+  /* kontrola */
+  box-sizing: border-box;
+  border: 3px solid black;
+  /************************/
+  z-index: -1;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-repeat: repeat-x;
+  background-attachment: fixed;
+  color: black;
   background: rgba(250,250,250, 0.3);
 }
 #home {
-  box-shadow:0px 0px 20px rgba(	0,0,0, 0.8);
-  scroll-behavior: inherit;
+  position: absolute;
   width: 80%;
-  height: 40%;
-  border-radius: 22px;
-  background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.8));
+  height: 50%;
+  border-radius: 90px;
+  box-shadow:0px 0px 20px rgba(	0,0,0, 0.8);
+  background-image: url("pic/carbon_white.jpg");
+  background-repeat: repeat-x;
+  background-attachment: fixed;
+  /* background: radial-gradient(circle, rgba(255,250,250, 0.9), rgba(255,250,250, 0.8), rgba(255,250,250, 0.8)); */
   transition: box-shadow 0.3s linear, background-color 1s linear;
   user-select: none;
-  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   text-align: center;
+  overflow: hidden;
+  z-index: 2;
 }
 #popis {
-  display: block;
+  position: absolute;
   left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   top:0;
-  width: 98%;
-  height: 98%;
-  border-radius: 22px;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: auto;
-  margin-top: auto;
+  width: 100%;
+  height: 90%;
+  border-radius: 100px;
+  margin: auto;
   box-shadow:0px 0px 5px 5px rgba(	0,0,0, 0.8) inset;
-  background: radial-gradient(circle, rgba(255, 208, 0, 0.1), rgba(255,250,250, 0.1), rgba(255,250,250, 0.2), rgba(0,0,0, 0.3));
+   /* rgba(140,140,140, 0.8), */
+   /* rgba(0,0,205) */
+  background: radial-gradient(circle, rgba(250, 250, 250, 1), rgba(230,230,230, 1), rgba(210,210,210, 1), rgba(100,100,100, 1));
+  /* background: radial-gradient(circle, rgba(250, 250, 250, 1), rgba(230,230,230, 1), rgba(210,210,210, 1), rgba(100,100,100, 1)); */
+  overflow: hidden;
 }
 #popis ul {
-  display: list-item;
   position: absolute;
   text-align: center;
   font-size: 2em;
-  margin-top: auto;
-  margin-bottom: auto;
+  margin: auto;
   top: 0;
   bottom: 0;
-  /* outline: 1px solid red; */
-  height: 80%;
+  right: 0;
+  left: 0;
+  height: 100%;
   width: 100%;
-  /* background-color: snow; */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 #popis ul li{
+  width: auto;
+  height: auto;
   display: block;
-  text-align: center;
+  margin-top: 2%;
+  box-shadow:0px 0px 20px rgba(	0,0,0, 0.8);
+  background: radial-gradient(circle, rgba(100,149,237, 0.6), rgba(210,210,210, 0.1), rgba(230,230,230, 0.1), rgba(100,149,237, 0.6));
+  /* background: radial-gradient(circle, rgb(255,165,0, 0.6), rgba(210,210,210, 0.1), rgba(230,230,230, 0.1), rgb(255,165,0, 0.6)); */
+
 }
-#w_2{
-  box-sizing: border-box;
-  position: relative;
-  outline: 1px solid red;
-  width: 100%;
-  min-height: 100%;
-  background-color: rgba(250,250,250, 0.3);
-  /* overflow-y: scroll; */
+#popis ul li:first-child{
+  margin-top: 0;
 }
 #gallery {
   padding: 40px 10px 40px 10px;
@@ -245,15 +279,6 @@ h1{
   padding-right: auto;
   margin-top: 1%;
 }
-#w_3{
-  box-sizing: border-box;
-  position: relative;
-  outline: 1px solid red;
-  width: 100%;
-  height: 100%;
-  background: rgba(250,250,250, 0.3);
-  /* overflow-y: hidden; */
-}
 #partners {
   box-shadow:0px 0px 20px rgba(	0,0,0, 0.8);
   transition: box-shadow 0.3s linear, background-color 1s linear;
@@ -272,15 +297,6 @@ h1{
   margin-top: 1%;
   /* overflow-y: scroll; */
 }
-#w_4{
-  box-sizing: border-box;
-  position: relative;
-  outline: 1px solid red;
-  width: 100%;
-  height: 100%;
-  background: rgba(250,250,250, 0.3);
-  /* overflow-y: scroll; */
-}
 #contact{
   position: absolute;
   padding: 10px 10px 40px 10px;
@@ -296,6 +312,12 @@ h1{
   margin-right: auto;
   height: auto;
 }
+
+
+
+
+
+
 ::-webkit-scrollbar {
     width: 12px;
 }
