--- a/css/hover.css
+++ b/css/hover.css
@@ -2149,6 +2149,7 @@
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
   position: relative;
   overflow: hidden;
+  transition: background 0.4s ease, box-shadow 2s ease;
 }
 .hvr-underline-from-left:before {
   content: "";
@@ -2159,16 +2160,27 @@
   bottom: 0;
   background: #2098D1;
   height: 4px;
+  transition: right 0.5s ease-out;
+  /*
   -webkit-transition-property: right;
   transition-property: right;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
+  */
 }
 .hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
   right: 0;
 }
+.hvr-underline-from-left:hover{
+	/* background: #6c757d; */
+	background: rgba(0, 123, 255, 0.1);
+	box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.6);
+
+}
+
+
 
 /* Underline From Center */
 .hvr-underline-from-center {
@@ -2399,7 +2411,7 @@
   position: relative;
   overflow: hidden;
 }
-.hvr-overline-reveal:before {
+.hvr-overline-reveal:after {
   content: "";
   position: absolute;
   z-index: -1;
@@ -2417,7 +2429,7 @@
   -webkit-transition-timing-function: ease-out;
   transition-timing-function: ease-out;
 }
-.hvr-overline-reveal:hover:before, .hvr-overline-reveal:focus:before, .hvr-overline-reveal:active:before {
+.hvr-overline-reveal:hover:after, .hvr-overline-reveal:focus:after, .hvr-overline-reveal:active:after {
   -webkit-transform: translateY(0);
   transform: translateY(0);
 }
@@ -2468,7 +2480,7 @@
   transition-property: box-shadow, transform;
 }
 .hvr-grow-shadow:hover, .hvr-grow-shadow:focus, .hvr-grow-shadow:active {
-  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 10px 10px -10px rgba(255, 255, 255, 0.5);
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
@@ -4148,5 +4160,248 @@
   width: 25px;
   height: 25px;
 }
+
+
+
+/* left-side-borders */
+.hvr-left-borders {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+.hvr-left-borders:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  /*right: 50%;*/
+  bottom: 0;
+  top: 0;
+  /*background: #2098D1;*/
+  /*height: 100%;*/
+  width: 30%;
+/*  border-left: 2px solid white;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;*/
+  /*-webkit-transform: translateY(4px);*/
+  transform: translateX(-15px);
+  /*-webkit-transition-property: transform;*/
+  /*transition-property: transform;*/
+  /*-webkit-transition-duration: 0.3s;*/
+  /*transition-duration: 0.3s;*/
+  /*-webkit-transition-timing-function: ease-out;*/
+  /*transition-timing-function: ease-out;*/
+  transition: transform 0.3s ease-out, width 0.3s ease-out;
+}
+.hvr-left-borders:hover:before{
+  /*-webkit-transform: translateY(0);*/
+  transform: translateX(0px);
+  border-left: 2px solid white;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+}
+
+.hvr-left-borders:focus:before, .hvr-left-borders:active:before{
+  transform: translateX(0px);
+  border-left: 2px solid white;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  width: 100%;
+}
+
+
+/* right-side-borders */
+.hvr-right-borders {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+.hvr-right-borders:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  /*left: 50%;*/
+  right: 0;
+  bottom: 0;
+  top: 0;
+  /*background: #2098D1;*/
+  /*height: 100%;*/
+  width: 30%;
+/*  border-left: 2px solid white;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;*/
+  /*-webkit-transform: translateY(4px);*/
+  transform: translateX(15px);
+  /*-webkit-transition-property: transform;*/
+  transition: transform 0.3s ease-out, width 0.3s ease-out;
+  /*transition-property: transform;*/
+  /*-webkit-transition-duration: 0.3s;*/
+  /*transition-duration: 0.3s;*/
+  /*-webkit-transition-timing-function: ease-out;*/
+  /*transition-timing-function: ease-out;*/
+}
+.hvr-right-borders:hover:after{
+  /*-webkit-transform: translateY(0);*/
+  transform: translateX(0px);
+  border-right: 2px solid white;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+}
+
+.hvr-right-borders:active:after, .hvr-right-borders:focus:after {
+  transform: translateX(0px);
+  border-right: 2px solid white;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  width: 100%;
+}
+
+
+
+
+
+/* left-side-borders */
+.hvr-mid-borders {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+.hvr-mid-borders:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  /*right: 50%;*/
+  right: 0;
+  top: 0;
+  /*background: #2098D1;*/
+  /*height: 100%;*/
+  width: 0%;
+  height: 1px;
+  background: white;
+  /*border-left: 2px solid white;*/
+  /*border-top: 2px solid white;*/
+  /*border-bottom: 2px solid white;*/
+  /*-webkit-transform: translateY(4px);*/
+  transform: translateX(-1px);
+  /*-webkit-transition-property: transform;*/
+  /*transition-property: transform;*/
+  /*-webkit-transition-duration: 0.3s;*/
+  /*transition-duration: 0.3s;*/
+  /*-webkit-transition-timing-function: ease-out;*/
+  /*transition-timing-function: ease-out;*/
+  transition: transform 0.3s ease-out, width 0.3s ease-out;
+}
+.hvr-mid-borders:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  /*left: 0;*/
+  /*right: 50%;*/
+  right: 0;
+  bottom: 0;
+  background: white;
+
+  /*background: #2098D1;*/
+  /*height: 100%;*/
+  width: 0%;
+  height: 1px;
+/*  border-left: 2px solid white;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;*/
+  /*-webkit-transform: translateY(4px);*/
+  transform: translateX(1px);
+  /*-webkit-transition-property: transform;*/
+  /*transition-property: transform;*/
+  /*-webkit-transition-duration: 0.3s;*/
+  /*transition-duration: 0.3s;*/
+  /*-webkit-transition-timing-function: ease-out;*/
+  /*transition-timing-function: ease-out;*/
+  transition: transform 0.3s ease-out, width 0.3s ease-out;
+}
+
+.hvr-mid-borders:hover:before{
+  /*-webkit-transform: translateY(0);*/
+  transform: translateY(0px);
+  width: 50%;
+  /*border-left: 2px solid white;*/
+  /*border-top: 2px solid white;*/
+  /*border-bottom: 2px solid white;*/
+}
+
+.hvr-mid-borders:focus:before, .hvr-mid-borders:active:before{
+  transform: translateY(0px);
+  width: 100%;
+  /*border-left: 2px solid white;*/
+  /*border-top: 2px solid white;*/
+  /*border-bottom: 2px solid white;*/
+  /*width: 100%;*/
+}
+
+.hvr-mid-borders:hover:after{
+  /*-webkit-transform: translateY(0);*/
+  transform: translateY(0px);
+  width: 50%;
+  /*border-left: 2px solid white;*/
+  /*border-top: 2px solid white;*/
+  /*border-bottom: 2px solid white;*/
+}
+
+.hvr-mid-borders:focus:after, .hvr-mid-borders:active:after{
+  transform: translateY(0px);
+  width: 100%;
+  /*border-left: 2px solid white;*/
+  /*border-top: 2px solid white;*/
+  /*border-bottom: 2px solid white;*/
+  /*width: 100%;*/
+}
+
+
+
+/* Overline Reveal */
+.hvr-overline-reveal {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+.hvr-overline-reveal:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  top: 0;
+  background: #2098D1;
+  height: 4px;
+  -webkit-transform: translateY(-4px);
+  transform: translateY(-4px);
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-overline-reveal:hover:after, .hvr-overline-reveal:focus:after, .hvr-overline-reveal:active:after {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+}
+
 
 /*# sourceMappingURL=hover.css.map */
